SQuirreL SQL FX Change Log
==============================

Feature: SQL editor supports search and replace. Keyboard shortcuts are Ctrl+F and Ctrl+H.

Feature: About dialog has a system info tab.

Feature: After rerunning a SQL query the former table layout is restored.

Feature: Made "Properties" button in Alias window work.

Feature: Format SQL has three new options, see menu File -> Settings -> Tab Format SQL
 - Indent sections check box
 - Comma placing radio buttons
 - When AND/OR keywords occur in FROM clauses you can choose to ignore the start new line setting.
   This may be considered to lead to more readable JOIN clauses.


Feature: Object tree offers find and filter functionality. Note that all edit fields involved offer code completion.

Bug fix: Two bug fixes concerning the current SQL mark:
  - StringIndexOutOfBoundsException occurred when the editor was empty and tools popup was opened.
  - The current SQL mark vanished when the split pane divider was moved over the mark.

Feature: SQL editor: The current SQL (SQL that is executed with Ctrl+Enter) is now marked by a box.
  In the settings the color of the box can be chosen or it can be switched off.
  Note: Due to an API function missing in the RichTextFx editor component we are forced to do some advanced calculation
        of the mark's position. The calculation depends on a system dependent line height offset.
        Users probably need to adjust this offset. To adjust the offset open or create a long script
        in the SQL editor. Place the caret inside a statement and open the settings windows.
        Some controls at the General tab allow to adjust the mark online.


Bug fix: When the "SQL to table" function failed during execution of the CREATE TABLE- or INSERT-statement no error message was logged.

Improvement: The progress window that is shown at Session start up offers to open its Alias properties dialog.
  Changing Alias properties can help to accelerate Session start up.
