@@ -1,6 +1,8 @@
 SQuirreL SQL FX Change Log
 ==============================
 
+Feature: The databases meta data detail tab of the Object tree shows if the driver is JDBC compliant, see java.sql.Driver.jdbcCompliant().
+
 Feature: SQL editor supports search and replace. Keyboard shortcuts are Ctrl+F and Ctrl+H.
 
 Feature: About dialog has a system info tab.
